--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -1,3 +1,8 @@
 {
-    "HELLO": "hello"
+    "HELLO": "hello",
+    "HOME": "Home",
+    "EXAMPLE": "Example",
+    "SOURCECODE": "Scource Code",
+    "ABOUT": "About",
+    "DOCS": "Document"
 }
