--- a/src/assets/i18n/zh-cn.json
+++ b/src/assets/i18n/zh-cn.json
@@ -1,3 +1,8 @@
 {
-    "HELLO": "您好"
+    "HELLO": "您好",
+    "HOME": "首页",
+    "EXAMPLE": "示例",
+    "SOURCECODE": "源码",
+    "ABOUT": "关于",
+    "DOCS": "文档"
 }
