fix:语言切换功能优化

--- a/src/assets/i18n/en.json
+++ b/src/assets/i18n/en.json
@@ -4,5 +4,6 @@
     "EXAMPLE": "Example",
     "SOURCECODE": "Scource Code",
     "ABOUT": "About",
-    "DOCS": "Document"
+    "DOCS": "Document",
+    "APPNAME": "Markdown Editor Develop On Angular"
 }
