--- a/src/assets/i18n/zh-cn.json
+++ b/src/assets/i18n/zh-cn.json
@@ -4,5 +4,6 @@
     "EXAMPLE": "示例",
     "SOURCECODE": "源码",
     "ABOUT": "关于",
-    "DOCS": "文档"
+    "DOCS": "文档",
+    "APPNAME": "基于Angular开发的Markdown编辑器"
 }
